--- a/.config
+++ b/.config
@@ -238,13 +238,13 @@ CONFIG_PACKAGE_odhcp6c=y
 CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
 CONFIG_PACKAGE_odhcpd-ipv6only=y
 CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
-CONFIG_PACKAGE_openssh-keygen=y
-CONFIG_PACKAGE_openssh-sftp-server=y
-CONFIG_PACKAGE_openssl-util=y
+# CONFIG_PACKAGE_openssh-keygen=y
+# CONFIG_PACKAGE_openssh-sftp-server=y
+# CONFIG_PACKAGE_openssl-util=y
 CONFIG_PACKAGE_regs=y
 CONFIG_PACKAGE_resolveip=y
-CONFIG_PACKAGE_swconfig=y
-CONFIG_PACKAGE_switch=y
+# CONFIG_PACKAGE_swconfig=y
+# CONFIG_PACKAGE_switch=y
 CONFIG_PACKAGE_tcpdump=y
 CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_wifi-profile=y
