--- a/.config
+++ b/.config
@@ -164,9 +164,9 @@ CONFIG_PACKAGE_kmod-nls-cp437=y
 CONFIG_PACKAGE_kmod-nls-iso8859-1=y
 CONFIG_PACKAGE_kmod-nls-utf8=y
 CONFIG_PACKAGE_kmod-scsi-core=y
-CONFIG_PACKAGE_kmod-tcp-bbr=m
+# CONFIG_PACKAGE_kmod-tcp-bbr=m
 CONFIG_PACKAGE_kmod-warp=y
-CONFIG_PACKAGE_kmod-zram=y
+# CONFIG_PACKAGE_kmod-zram=y
 CONFIG_PACKAGE_kvcedit=y
 CONFIG_PACKAGE_libatomic=y
 CONFIG_PACKAGE_libblkid=y
@@ -250,7 +250,7 @@ CONFIG_PACKAGE_wifi-profile=y
 CONFIG_PACKAGE_wireless-regdb=y
 CONFIG_PACKAGE_wireless-tools=y
 CONFIG_PACKAGE_zlib=y
-CONFIG_PACKAGE_zram-swap=y
+# CONFIG_PACKAGE_zram-swap=y
 # CONFIG_PKG_CHECK_FORMAT_SECURITY is not set
 # CONFIG_PKG_FORTIFY_SOURCE_1 is not set
 CONFIG_PKG_FORTIFY_SOURCE_2=y
