--- a/.config
+++ b/.config
@@ -67,7 +67,7 @@ CONFIG_MTK_MLME_MULTI_QUEUE_SUPPORT=y
 CONFIG_MTK_MT_AP_SUPPORT=m
 CONFIG_MTK_MT_DFS_SUPPORT=y
 CONFIG_MTK_MT_MAC=y
-CONFIG_MTK_MT_WIFI=m
+CONFIG_MTK_MT_WIFI=y
 CONFIG_MTK_MT_WIFI_PATH="mt_wifi"
 CONFIG_MTK_MUMIMO_SUPPORT=y
 CONFIG_MTK_MU_RA_SUPPORT=y
@@ -79,7 +79,7 @@ CONFIG_MTK_RED_SUPPORT=y
 CONFIG_MTK_RTMP_FLASH_SUPPORT=y
 CONFIG_MTK_RT_FIRST_CARD_EEPROM="flash"
 CONFIG_MTK_RT_FIRST_IF_RF_OFFSET=0xc0000
-# CONFIG_MTK_SCS_FW_OFFLOAD=y
+CONFIG_MTK_SCS_FW_OFFLOAD=y
 CONFIG_MTK_SECOND_IF_NONE=y
 CONFIG_MTK_SMART_CARRIER_SENSE_SUPPORT=y
 CONFIG_MTK_SPECTRUM_SUPPORT=y
@@ -92,7 +92,7 @@ CONFIG_MTK_VLAN_SUPPORT=y
 CONFIG_MTK_VOW_SUPPORT=y
 CONFIG_MTK_WARP_V2=y
 CONFIG_MTK_WDS_SUPPORT=y
-CONFIG_MTK_WHNAT_SUPPORT=m
+CONFIG_MTK_WHNAT_SUPPORT=y
 CONFIG_MTK_WIFI_BASIC_FUNC=y
 CONFIG_MTK_WIFI_DRIVER=y
 CONFIG_MTK_WIFI_EAP_FEATURE=y
@@ -111,17 +111,17 @@ CONFIG_MTK_WSC_V2_SUPPORT=y
 CONFIG_OPENSSL_WITH_NPN=y
 # CONFIG_PACKAGE_TURBOACC_INCLUDE_FLOW_OFFLOADING is not set
 CONFIG_PACKAGE_TURBOACC_INCLUDE_NO_FASTPATH=y
-CONFIG_PACKAGE_blkid=m
+CONFIG_PACKAGE_blkid=y
 CONFIG_PACKAGE_blockd=y
-CONFIG_PACKAGE_blockdev=m
+CONFIG_PACKAGE_blockdev=y
 CONFIG_PACKAGE_ca-certificates=y
 CONFIG_PACKAGE_datconf=y
 CONFIG_PACKAGE_datconf-lua=y
-CONFIG_PACKAGE_e2fsprogs=m
+CONFIG_PACKAGE_e2fsprogs=y
 CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_ip-bridge=y
-CONFIG_PACKAGE_ip6tables=y
+# CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_ipset=y
 CONFIG_PACKAGE_iptables-mod-filter=y
 CONFIG_PACKAGE_iptables-mod-u32=y
@@ -149,8 +149,8 @@ CONFIG_PACKAGE_kmod-crypto-sha512=y
 CONFIG_PACKAGE_kmod-fs-autofs4=y
 CONFIG_PACKAGE_kmod-fs-vfat=y
 CONFIG_PACKAGE_kmod-ipt-filter=y
-CONFIG_PACKAGE_kmod-ipt-nat6=y
-CONFIG_PACKAGE_kmod-ipt-raw6=y
+# CONFIG_PACKAGE_kmod-ipt-nat6=y
+# CONFIG_PACKAGE_kmod-ipt-raw6=y
 CONFIG_PACKAGE_kmod-ipt-u32=y
 CONFIG_PACKAGE_kmod-ipt-ulog=y
 CONFIG_PACKAGE_kmod-lib-crc16=m
@@ -158,7 +158,7 @@ CONFIG_PACKAGE_kmod-lib-crc32c=y
 CONFIG_PACKAGE_kmod-lib-lzo=y
 CONFIG_PACKAGE_kmod-mediatek_hnat=y
 CONFIG_PACKAGE_kmod-mt_wifi=y
-CONFIG_PACKAGE_kmod-nf-nat6=y
+# CONFIG_PACKAGE_kmod-nf-nat6=y
 CONFIG_PACKAGE_kmod-nls-base=y
 CONFIG_PACKAGE_kmod-nls-cp437=y
 CONFIG_PACKAGE_kmod-nls-iso8859-1=y
@@ -233,17 +233,17 @@ CONFIG_PACKAGE_mii_mgr=y
 # CONFIG_PACKAGE_miniupnpd=y
 CONFIG_PACKAGE_mkf2fs=m
 CONFIG_PACKAGE_nano=y
-CONFIG_PACKAGE_odhcp6c=y
-CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
-CONFIG_PACKAGE_odhcpd-ipv6only=y
-CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
+# CONFIG_PACKAGE_odhcp6c=y
+# ONFIG_PACKAGE_odhcp6c_ext_cer_id=0
+# CONFIG_PACKAGE_odhcpd-ipv6only=y
+# CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
 CONFIG_PACKAGE_openssh-keygen=y
 CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_openssl-util=y
 CONFIG_PACKAGE_regs=y
 CONFIG_PACKAGE_resolveip=y
 CONFIG_PACKAGE_swconfig=y
-CONFIG_PACKAGE_switch=y
+# CONFIG_PACKAGE_switch=y
 CONFIG_PACKAGE_tcpdump=y
 CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_wifi-profile=y
