--- a/.config
+++ b/.config
@@ -110,7 +110,7 @@ CONFIG_MTK_WSC_V2_SUPPORT=y
 # CONFIG_OPENSSL_PREFER_CHACHA_OVER_GCM is not set
 CONFIG_OPENSSL_WITH_NPN=y
 # CONFIG_PACKAGE_TURBOACC_INCLUDE_FLOW_OFFLOADING is not set
-CONFIG_PACKAGE_TURBOACC_INCLUDE_NO_FASTPATH=y
+# CONFIG_PACKAGE_TURBOACC_INCLUDE_NO_FASTPATH=y
 CONFIG_PACKAGE_blkid=y
 CONFIG_PACKAGE_blockd=y
 CONFIG_PACKAGE_blockdev=y
@@ -121,7 +121,7 @@ CONFIG_PACKAGE_e2fsprogs=y
 CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_ip-bridge=y
-# CONFIG_PACKAGE_ip6tables=y
+CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_ipset=y
 CONFIG_PACKAGE_iptables-mod-filter=y
 CONFIG_PACKAGE_iptables-mod-u32=y
@@ -149,16 +149,16 @@ CONFIG_PACKAGE_kmod-crypto-sha512=y
 CONFIG_PACKAGE_kmod-fs-autofs4=y
 CONFIG_PACKAGE_kmod-fs-vfat=y
 CONFIG_PACKAGE_kmod-ipt-filter=y
-# CONFIG_PACKAGE_kmod-ipt-nat6=y
-# CONFIG_PACKAGE_kmod-ipt-raw6=y
+CONFIG_PACKAGE_kmod-ipt-nat6=y
+CONFIG_PACKAGE_kmod-ipt-raw6=y
 CONFIG_PACKAGE_kmod-ipt-u32=y
 CONFIG_PACKAGE_kmod-ipt-ulog=y
-CONFIG_PACKAGE_kmod-lib-crc16=m
+CONFIG_PACKAGE_kmod-lib-crc16=y
 CONFIG_PACKAGE_kmod-lib-crc32c=y
 CONFIG_PACKAGE_kmod-lib-lzo=y
 CONFIG_PACKAGE_kmod-mediatek_hnat=y
 CONFIG_PACKAGE_kmod-mt_wifi=y
-# CONFIG_PACKAGE_kmod-nf-nat6=y
+CONFIG_PACKAGE_kmod-nf-nat6=y
 CONFIG_PACKAGE_kmod-nls-base=y
 CONFIG_PACKAGE_kmod-nls-cp437=y
 CONFIG_PACKAGE_kmod-nls-iso8859-1=y
@@ -172,10 +172,10 @@ CONFIG_PACKAGE_libatomic=y
 CONFIG_PACKAGE_libblkid=y
 CONFIG_PACKAGE_libcap-ng=y
 CONFIG_PACKAGE_libcbor=y
-CONFIG_PACKAGE_libcomerr=m
+CONFIG_PACKAGE_libcomerr=y
 CONFIG_PACKAGE_libevdev=y
-CONFIG_PACKAGE_libext2fs=m
-CONFIG_PACKAGE_libf2fs=m
+CONFIG_PACKAGE_libext2fs=y
+CONFIG_PACKAGE_libf2fs=y
 CONFIG_PACKAGE_libfido2=y
 CONFIG_PACKAGE_libipset=y
 CONFIG_PACKAGE_libkvcutil=y
@@ -190,12 +190,12 @@ CONFIG_PACKAGE_libopenssl-devcrypto=y
 CONFIG_PACKAGE_libpcap=y
 CONFIG_PACKAGE_libpcre=y
 CONFIG_PACKAGE_librt=y
-CONFIG_PACKAGE_libsmartcols=m
-CONFIG_PACKAGE_libss=m
+CONFIG_PACKAGE_libsmartcols=y
+CONFIG_PACKAGE_libss=y
 CONFIG_PACKAGE_libstdcpp=y
 CONFIG_PACKAGE_libudev-zero=y
 CONFIG_PACKAGE_libuuid=y
-CONFIG_PACKAGE_losetup=m
+CONFIG_PACKAGE_losetup=y
 # CONFIG_PACKAGE_luci-app-cpufreq is not set
 CONFIG_PACKAGE_luci-app-mtk=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy is not set
@@ -231,19 +231,19 @@ CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-bootstrap-mod=y
 CONFIG_PACKAGE_mii_mgr=y
 # CONFIG_PACKAGE_miniupnpd=y
-CONFIG_PACKAGE_mkf2fs=m
+CONFIG_PACKAGE_mkf2fs=y
 CONFIG_PACKAGE_nano=y
-# CONFIG_PACKAGE_odhcp6c=y
-# ONFIG_PACKAGE_odhcp6c_ext_cer_id=0
-# CONFIG_PACKAGE_odhcpd-ipv6only=y
-# CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
+CONFIG_PACKAGE_odhcp6c=y
+CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
+CONFIG_PACKAGE_odhcpd-ipv6only=y
+CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
 CONFIG_PACKAGE_openssh-keygen=y
 CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_openssl-util=y
 CONFIG_PACKAGE_regs=y
 CONFIG_PACKAGE_resolveip=y
 CONFIG_PACKAGE_swconfig=y
-# CONFIG_PACKAGE_switch=y
+CONFIG_PACKAGE_switch=y
 CONFIG_PACKAGE_tcpdump=y
 CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_wifi-profile=y
@@ -257,7 +257,7 @@ CONFIG_PKG_FORTIFY_SOURCE_2=y
 # CONFIG_UnblockNeteaseMusic_Go is not set
 CONFIG_WARP_CHIPSET="mt7981"
 CONFIG_WARP_DBG_SUPPORT=y
-CONFIG_WARP_VERSION=2
+CONFIG_WARP_VERSION=16
 CONFIG_WED_HW_RRO_SUPPORT=y
 CONFIG_WIFI_NORMAL_SETTING=y
 # CONFIG_WOLFSSL_HAS_ECC25519 is not set
