--- a/.config
+++ b/.config
@@ -110,7 +110,7 @@ CONFIG_MTK_WSC_V2_SUPPORT=y
 # CONFIG_OPENSSL_PREFER_CHACHA_OVER_GCM is not set
 CONFIG_OPENSSL_WITH_NPN=y
 # CONFIG_PACKAGE_TURBOACC_INCLUDE_FLOW_OFFLOADING is not set
-# CONFIG_PACKAGE_TURBOACC_INCLUDE_NO_FASTPATH=y
+CONFIG_PACKAGE_TURBOACC_INCLUDE_NO_FASTPATH=y
 CONFIG_PACKAGE_blkid=y
 CONFIG_PACKAGE_blockd=y
 CONFIG_PACKAGE_blockdev=y
@@ -164,7 +164,7 @@ CONFIG_PACKAGE_kmod-nls-cp437=y
 CONFIG_PACKAGE_kmod-nls-iso8859-1=y
 CONFIG_PACKAGE_kmod-nls-utf8=y
 CONFIG_PACKAGE_kmod-scsi-core=y
-# CONFIG_PACKAGE_kmod-tcp-bbr=m
+CONFIG_PACKAGE_kmod-tcp-bbr=y
 CONFIG_PACKAGE_kmod-warp=y
 # CONFIG_PACKAGE_kmod-zram=y
 CONFIG_PACKAGE_kvcedit=y
@@ -257,7 +257,7 @@ CONFIG_PKG_FORTIFY_SOURCE_2=y
 # CONFIG_UnblockNeteaseMusic_Go is not set
 CONFIG_WARP_CHIPSET="mt7981"
 CONFIG_WARP_DBG_SUPPORT=y
-CONFIG_WARP_VERSION=16
+CONFIG_WARP_VERSION=4096
 CONFIG_WED_HW_RRO_SUPPORT=y
 CONFIG_WIFI_NORMAL_SETTING=y
 # CONFIG_WOLFSSL_HAS_ECC25519 is not set
