--- a/.config
+++ b/.config
@@ -91,13 +91,13 @@ CONFIG_MTK_UAPSD=y
 CONFIG_MTK_VLAN_SUPPORT=y
 CONFIG_MTK_VOW_SUPPORT=y
 CONFIG_MTK_WARP_V2=y
-CONFIG_MTK_WDS_SUPPORT=y
+# CONFIG_MTK_WDS_SUPPORT=y
 CONFIG_MTK_WHNAT_SUPPORT=y
 CONFIG_MTK_WIFI_BASIC_FUNC=y
 CONFIG_MTK_WIFI_DRIVER=y
 CONFIG_MTK_WIFI_EAP_FEATURE=y
 CONFIG_MTK_WIFI_FW_BIN_LOAD=y
-CONFIG_MTK_WIFI_MODE_AP=m
+# CONFIG_MTK_WIFI_MODE_AP=m
 CONFIG_MTK_WIFI_MT_MAC=y
 CONFIG_MTK_WIFI_TWT_SUPPORT=y
 CONFIG_MTK_WLAN_HOOK=y
@@ -227,7 +227,7 @@ CONFIG_PACKAGE_luci-app-mtk=y
 # CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray_plugin is not set
 CONFIG_PACKAGE_luci-i18n-mtk-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
-CONFIG_PACKAGE_luci-theme-argon=y
+# CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-bootstrap-mod=y
 CONFIG_PACKAGE_mii_mgr=y
 # CONFIG_PACKAGE_miniupnpd=y
