--- a/.config
+++ b/.config
@@ -64,7 +64,7 @@ CONFIG_MTK_MCAST_RATE_SPECIFIC=y
 CONFIG_MTK_MEMORY_SHRINK=y
 CONFIG_MTK_MGMT_TXPWR_CTRL=y
 CONFIG_MTK_MLME_MULTI_QUEUE_SUPPORT=y
-CONFIG_MTK_MT_AP_SUPPORT=m
+# CONFIG_MTK_MT_AP_SUPPORT=m
 CONFIG_MTK_MT_DFS_SUPPORT=y
 CONFIG_MTK_MT_MAC=y
 CONFIG_MTK_MT_WIFI=y
