--- a/.config
+++ b/.config
@@ -36,7 +36,7 @@ CONFIG_MTK_CFG_SUPPORT_FALCON_TXCMD_DBG=y
 CONFIG_MTK_CHIP_MT7981=y
 CONFIG_MTK_CONNINFRA_APSOC=y
 CONFIG_MTK_CONNINFRA_APSOC_MT7981=y
-CONFIG_MTK_CON_WPS_SUPPORT=y
+# CONFIG_MTK_CON_WPS_SUPPORT=y
 CONFIG_MTK_DBDC_MODE=y
 CONFIG_MTK_DOT11K_RRM_SUPPORT=y
 CONFIG_MTK_DOT11R_FT_SUPPORT=y
@@ -65,7 +65,7 @@ CONFIG_MTK_MEMORY_SHRINK=y
 CONFIG_MTK_MGMT_TXPWR_CTRL=y
 CONFIG_MTK_MLME_MULTI_QUEUE_SUPPORT=y
 # CONFIG_MTK_MT_AP_SUPPORT=m
-CONFIG_MTK_MT_DFS_SUPPORT=y
+# CONFIG_MTK_MT_DFS_SUPPORT=y
 CONFIG_MTK_MT_MAC=y
 CONFIG_MTK_MT_WIFI=y
 CONFIG_MTK_MT_WIFI_PATH="mt_wifi"
