--- a/.config
+++ b/.config
@@ -72,6 +72,7 @@ CONFIG_MTK_SUPPORT_OPENWRT=y
 CONFIG_MTK_THIRD_IF_NONE=y
 CONFIG_MTK_TPC_SUPPORT=y
 CONFIG_MTK_TXBF_SUPPORT=y
+CONFIG_MTK_VLAN_SUPPORT=y
 CONFIG_MTK_VOW_SUPPORT=y
 CONFIG_MTK_WHNAT_SUPPORT=y
 CONFIG_MTK_WIFI_BASIC_FUNC=y
@@ -180,6 +181,8 @@ CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_openssl-util=y
 CONFIG_PACKAGE_regs=y
 CONFIG_PACKAGE_resolveip=y
+CONFIG_PACKAGE_swconfig=y
+CONFIG_PACKAGE_switch=y
 CONFIG_PACKAGE_tcpdump=y
 CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_wifi-profile=y
