--- a/.config
+++ b/.config
@@ -15,9 +15,6 @@ CONFIG_KERNEL_CGROUP_DEVICE=y
 CONFIG_KERNEL_CGROUP_FREEZER=y
 CONFIG_KERNEL_DEVMEM=y
 CONFIG_KERNEL_NET_CLS_CGROUP=y
-CONFIG_MTK_ACK_CTS_TIMEOUT_SUPPORT=y
-CONFIG_MTK_AIR_MONITOR=y
-CONFIG_MTK_ANTENNA_CONTROL_SUPPORT=y
 CONFIG_MTK_ATE_SUPPORT=y
 CONFIG_MTK_BACKGROUND_SCAN_SUPPORT=y
 CONFIG_MTK_CAL_BIN_FILE_SUPPORT=y
@@ -29,9 +26,6 @@ CONFIG_MTK_CHIP_MT7981=y
 CONFIG_MTK_CONNINFRA_APSOC=y
 CONFIG_MTK_CONNINFRA_APSOC_MT7981=y
 CONFIG_MTK_DBDC_MODE=y
-CONFIG_MTK_DOT11K_RRM_SUPPORT=y
-CONFIG_MTK_DOT11R_FT_SUPPORT=y
-CONFIG_MTK_DOT11W_PMF_SUPPORT=y
 CONFIG_MTK_DOT11_HE_AX=y
 CONFIG_MTK_DOT11_N_SUPPORT=y
 CONFIG_MTK_DOT11_VHT_AC=y
@@ -39,50 +33,39 @@ CONFIG_MTK_FAST_NAT_SUPPORT=y
 CONFIG_MTK_FIRST_IF_EEPROM_FLASH=y
 CONFIG_MTK_FIRST_IF_IPAILNA=y
 CONFIG_MTK_FIRST_IF_MT7981=y
-CONFIG_MTK_GREENAP_SUPPORT=y
 CONFIG_MTK_G_BAND_256QAM_SUPPORT=y
 CONFIG_MTK_HDR_TRANS_RX_SUPPORT=y
 CONFIG_MTK_HDR_TRANS_TX_SUPPORT=y
-CONFIG_MTK_ICAP_SUPPORT=y
-CONFIG_MTK_INTERWORKING=y
 CONFIG_MTK_MAP_R2_VER_SUPPORT=y
 CONFIG_MTK_MAP_R3_VER_SUPPORT=y
 CONFIG_MTK_MAP_SUPPORT=y
-CONFIG_MTK_MBSS_DTIM_SUPPORT=y
-CONFIG_MTK_MBSS_SUPPORT=y
-CONFIG_MTK_MCAST_RATE_SPECIFIC=y
 CONFIG_MTK_MEMORY_SHRINK=y
-CONFIG_MTK_MGMT_TXPWR_CTRL=y
-CONFIG_MTK_MLME_MULTI_QUEUE_SUPPORT=y
+CONFIG_MTK_MT_DFS_SUPPORT=y
 CONFIG_MTK_MT_MAC=y
 CONFIG_MTK_MT_WIFI=y
 CONFIG_MTK_MT_WIFI_PATH="mt_wifi"
-CONFIG_MTK_OFFCHANNEL_SCAN_FEATURE=y
-CONFIG_MTK_OWE_SUPPORT=y
-CONFIG_MTK_RA_PHY_RATE_SUPPORT=y
-CONFIG_MTK_RED_SUPPORT=y
+CONFIG_MTK_MUMIMO_SUPPORT=y
+CONFIG_MTK_MU_RA_SUPPORT=y
 CONFIG_MTK_RTMP_FLASH_SUPPORT=y
 CONFIG_MTK_RT_FIRST_CARD_EEPROM="flash"
 CONFIG_MTK_RT_FIRST_IF_RF_OFFSET=0xc0000
 CONFIG_MTK_SCS_FW_OFFLOAD=y
 CONFIG_MTK_SECOND_IF_NONE=y
 CONFIG_MTK_SMART_CARRIER_SENSE_SUPPORT=y
-CONFIG_MTK_SPECTRUM_SUPPORT=y
 CONFIG_MTK_SUPPORT_OPENWRT=y
 CONFIG_MTK_THIRD_IF_NONE=y
 CONFIG_MTK_TPC_SUPPORT=y
 CONFIG_MTK_TXBF_SUPPORT=y
-CONFIG_MTK_VLAN_SUPPORT=y
-CONFIG_MTK_VOW_SUPPORT=y
+CONFIG_MTK_WARP_V2=y
 CONFIG_MTK_WHNAT_SUPPORT=y
 CONFIG_MTK_WIFI_BASIC_FUNC=y
 CONFIG_MTK_WIFI_DRIVER=y
 CONFIG_MTK_WIFI_EAP_FEATURE=y
 CONFIG_MTK_WIFI_FW_BIN_LOAD=y
 CONFIG_MTK_WIFI_MT_MAC=y
+CONFIG_MTK_WIFI_TWT_SUPPORT=y
 CONFIG_MTK_WLAN_HOOK=y
 CONFIG_MTK_WLAN_SERVICE=y
-CONFIG_MTK_WNM_SUPPORT=y
 CONFIG_OPENSSL_WITH_NPN=y
 CONFIG_PACKAGE_blkid=y
 CONFIG_PACKAGE_blockd=y
@@ -94,16 +77,13 @@ CONFIG_PACKAGE_e2fsprogs=y
 CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_ip-bridge=y
-CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_ipset=y
 CONFIG_PACKAGE_iptables-mod-filter=y
 CONFIG_PACKAGE_iptables-mod-u32=y
-CONFIG_PACKAGE_iptables-mod-ulog=y
 CONFIG_PACKAGE_iw=y
 CONFIG_PACKAGE_iwinfo=y
 CONFIG_PACKAGE_kmod-ata-core=y
 CONFIG_PACKAGE_kmod-conninfra=y
-CONFIG_PACKAGE_kmod-crypto-acompress=y
 CONFIG_PACKAGE_kmod-crypto-ccm=y
 CONFIG_PACKAGE_kmod-crypto-cmac=y
 CONFIG_PACKAGE_kmod-crypto-crc32c=y
@@ -122,21 +102,18 @@ CONFIG_PACKAGE_kmod-crypto-sha512=y
 CONFIG_PACKAGE_kmod-fs-autofs4=y
 CONFIG_PACKAGE_kmod-fs-vfat=y
 CONFIG_PACKAGE_kmod-ipt-filter=y
-CONFIG_PACKAGE_kmod-ipt-nat6=y
 CONFIG_PACKAGE_kmod-ipt-raw6=y
 CONFIG_PACKAGE_kmod-ipt-u32=y
-CONFIG_PACKAGE_kmod-ipt-ulog=y
 CONFIG_PACKAGE_kmod-lib-crc16=y
 CONFIG_PACKAGE_kmod-lib-crc32c=y
-CONFIG_PACKAGE_kmod-lib-lzo=y
 CONFIG_PACKAGE_kmod-mediatek_hnat=y
 CONFIG_PACKAGE_kmod-mt_wifi=y
-CONFIG_PACKAGE_kmod-nf-nat6=y
 CONFIG_PACKAGE_kmod-nls-base=y
 CONFIG_PACKAGE_kmod-nls-cp437=y
 CONFIG_PACKAGE_kmod-nls-iso8859-1=y
 CONFIG_PACKAGE_kmod-nls-utf8=y
 CONFIG_PACKAGE_kmod-scsi-core=y
+CONFIG_PACKAGE_kmod-warp=y
 CONFIG_PACKAGE_kvcedit=y
 CONFIG_PACKAGE_libatomic=y
 CONFIG_PACKAGE_libblkid=y
@@ -158,8 +135,6 @@ CONFIG_PACKAGE_libnl-route=y
 CONFIG_PACKAGE_libopenssl-afalg_sync=y
 CONFIG_PACKAGE_libopenssl-devcrypto=y
 CONFIG_PACKAGE_libpcap=y
-CONFIG_PACKAGE_libpcre=y
-CONFIG_PACKAGE_librt=y
 CONFIG_PACKAGE_libsmartcols=y
 CONFIG_PACKAGE_libss=y
 CONFIG_PACKAGE_libstdcpp=y
@@ -172,10 +147,6 @@ CONFIG_PACKAGE_luci-theme-bootstrap-mod=y
 CONFIG_PACKAGE_mii_mgr=y
 CONFIG_PACKAGE_mkf2fs=y
 CONFIG_PACKAGE_nano=y
-CONFIG_PACKAGE_odhcp6c=y
-CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
-CONFIG_PACKAGE_odhcpd-ipv6only=y
-CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
 CONFIG_PACKAGE_openssh-keygen=y
 CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_openssl-util=y
@@ -188,11 +159,10 @@ CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_wifi-profile=y
 CONFIG_PACKAGE_wireless-regdb=y
 CONFIG_PACKAGE_wireless-tools=y
-CONFIG_PACKAGE_zlib=y
 CONFIG_PKG_FORTIFY_SOURCE_2=y
 CONFIG_WARP_CHIPSET="mt7981"
 CONFIG_WARP_DBG_SUPPORT=y
-CONFIG_WARP_VERSION=67108864
+CONFIG_WARP_VERSION=1
 CONFIG_WED_HW_RRO_SUPPORT=y
 CONFIG_WIFI_NORMAL_SETTING=y
 CONFIG_first_card=y
