--- a/.config
+++ b/.config
@@ -90,13 +90,13 @@ CONFIG_MTK_UAPSD=y
 CONFIG_MTK_VLAN_SUPPORT=y
 CONFIG_MTK_VOW_SUPPORT=y
 CONFIG_MTK_WARP_V2=y
-CONFIG_MTK_WDS_SUPPORT=y
+# CONFIG_MTK_WDS_SUPPORT is not set
 CONFIG_MTK_WHNAT_SUPPORT=m
 CONFIG_MTK_WIFI_BASIC_FUNC=y
 CONFIG_MTK_WIFI_DRIVER=y
 CONFIG_MTK_WIFI_EAP_FEATURE=y
 CONFIG_MTK_WIFI_FW_BIN_LOAD=y
-CONFIG_MTK_WIFI_MODE_AP=m
+# CONFIG_MTK_WIFI_MODE_AP is not set
 CONFIG_MTK_WIFI_MT_MAC=y
 CONFIG_MTK_WIFI_TWT_SUPPORT=y
 CONFIG_MTK_WLAN_HOOK=y
@@ -109,7 +109,7 @@ CONFIG_MTK_WSC_V2_SUPPORT=y
 # CONFIG_OPENSSL_PREFER_CHACHA_OVER_GCM is not set
 CONFIG_OPENSSL_WITH_NPN=y
 # CONFIG_PACKAGE_TURBOACC_INCLUDE_FLOW_OFFLOADING is not set
-CONFIG_PACKAGE_TURBOACC_INCLUDE_NO_FASTPATH=y
+# CONFIG_PACKAGE_TURBOACC_INCLUDE_NO_FASTPATH is not set
 CONFIG_PACKAGE_blkid=m
 CONFIG_PACKAGE_blockd=y
 CONFIG_PACKAGE_blockdev=m
@@ -146,7 +146,7 @@ CONFIG_PACKAGE_kmod-crypto-sha512=y
 CONFIG_PACKAGE_kmod-fs-autofs4=y
 CONFIG_PACKAGE_kmod-fs-vfat=y
 CONFIG_PACKAGE_kmod-ipt-filter=y
-CONFIG_PACKAGE_kmod-ipt-raw6=y
+# CONFIG_PACKAGE_kmod-ipt-raw6 is not set
 CONFIG_PACKAGE_kmod-ipt-u32=y
 CONFIG_PACKAGE_kmod-lib-crc16=m
 CONFIG_PACKAGE_kmod-lib-crc32c=y
