--- a/.config
+++ b/.config
@@ -110,6 +110,8 @@ CONFIG_MTK_WSC_V2_SUPPORT=y
 CONFIG_OPENSSL_WITH_NPN=y
 # CONFIG_PACKAGE_TURBOACC_INCLUDE_FLOW_OFFLOADING is not set
 # CONFIG_PACKAGE_TURBOACC_INCLUDE_NO_FASTPATH is not set
+# CONFIG_PACKAGE_dnsmasq_full_dhcpv6 is not set
+# CONFIG_PACKAGE_ipv6helper is not set
 CONFIG_PACKAGE_blkid=m
 CONFIG_PACKAGE_blockd=y
 CONFIG_PACKAGE_blockdev=m
