--- a/.config
+++ b/.config
@@ -20,6 +20,7 @@ CONFIG_KERNEL_DEVMEM=y
 # CONFIG_KERNEL_KEYS is not set
 # CONFIG_KERNEL_MEMCG_SWAP is not set
 CONFIG_KERNEL_NET_CLS_CGROUP=y
+CONFIG_MAKE_TOOLCHAIN=y
 CONFIG_MTK_ACK_CTS_TIMEOUT_SUPPORT=y
 CONFIG_MTK_AIR_MONITOR=y
 CONFIG_MTK_AMPDU_CONF_SUPPORT=y
@@ -72,7 +73,7 @@ CONFIG_MTK_MUMIMO_SUPPORT=y
 CONFIG_MTK_MU_RA_SUPPORT=y
 CONFIG_MTK_OFFCHANNEL_SCAN_FEATURE=y
 CONFIG_MTK_OWE_SUPPORT=y
-# CONFIG_MTK_QOS_R1_SUPPORT is not set
+CONFIG_MTK_QOS_R1_SUPPORT=y
 CONFIG_MTK_RA_PHY_RATE_SUPPORT=y
 CONFIG_MTK_RED_SUPPORT=y
 CONFIG_MTK_RTMP_FLASH_SUPPORT=y
@@ -90,13 +91,13 @@ CONFIG_MTK_UAPSD=y
 CONFIG_MTK_VLAN_SUPPORT=y
 CONFIG_MTK_VOW_SUPPORT=y
 CONFIG_MTK_WARP_V2=y
-# CONFIG_MTK_WDS_SUPPORT is not set
+CONFIG_MTK_WDS_SUPPORT=y
 CONFIG_MTK_WHNAT_SUPPORT=m
 CONFIG_MTK_WIFI_BASIC_FUNC=y
 CONFIG_MTK_WIFI_DRIVER=y
 CONFIG_MTK_WIFI_EAP_FEATURE=y
 CONFIG_MTK_WIFI_FW_BIN_LOAD=y
-# CONFIG_MTK_WIFI_MODE_AP is not set
+CONFIG_MTK_WIFI_MODE_AP=m
 CONFIG_MTK_WIFI_MT_MAC=y
 CONFIG_MTK_WIFI_TWT_SUPPORT=y
 CONFIG_MTK_WLAN_HOOK=y
@@ -108,28 +109,29 @@ CONFIG_MTK_WSC_V2_SUPPORT=y
 # CONFIG_OPENSSL_ENGINE_BUILTIN is not set
 # CONFIG_OPENSSL_PREFER_CHACHA_OVER_GCM is not set
 CONFIG_OPENSSL_WITH_NPN=y
-# CONFIG_PACKAGE_TURBOACC_INCLUDE_FLOW_OFFLOADING is not set
-# CONFIG_PACKAGE_TURBOACC_INCLUDE_NO_FASTPATH is not set
-# CONFIG_PACKAGE_dnsmasq_full_dhcpv6 is not set
-# CONFIG_PACKAGE_ipv6helper is not set
+# CONFIG_PACKAGE_TURBOACC_INCLUDE_BBR_CCA is not set
+# CONFIG_PACKAGE_TURBOACC_INCLUDE_OFFLOADING is not set
 CONFIG_PACKAGE_blkid=m
 CONFIG_PACKAGE_blockd=y
 CONFIG_PACKAGE_blockdev=m
-CONFIG_PACKAGE_ca-certificates=y
 CONFIG_PACKAGE_datconf=y
 CONFIG_PACKAGE_datconf-lua=y
+CONFIG_PACKAGE_dnsmasq=y
+# CONFIG_PACKAGE_dnsmasq-full is not set
 CONFIG_PACKAGE_e2fsprogs=m
 CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_ip-bridge=y
+# CONFIG_PACKAGE_ip6tables is not set
 CONFIG_PACKAGE_ipset=y
 CONFIG_PACKAGE_iptables-mod-filter=y
+# CONFIG_PACKAGE_iptables-mod-tproxy is not set
 CONFIG_PACKAGE_iptables-mod-u32=y
+CONFIG_PACKAGE_iptables-mod-ulog=y
 CONFIG_PACKAGE_iw=y
 CONFIG_PACKAGE_iwinfo=y
 CONFIG_PACKAGE_kmod-ata-core=y
 CONFIG_PACKAGE_kmod-conninfra=y
-CONFIG_PACKAGE_kmod-crypto-acompress=y
 CONFIG_PACKAGE_kmod-crypto-ccm=y
 CONFIG_PACKAGE_kmod-crypto-cmac=y
 CONFIG_PACKAGE_kmod-crypto-crc32c=y
@@ -147,24 +149,29 @@ CONFIG_PACKAGE_kmod-crypto-sha256=y
 CONFIG_PACKAGE_kmod-crypto-sha512=y
 CONFIG_PACKAGE_kmod-fs-autofs4=y
 CONFIG_PACKAGE_kmod-fs-vfat=y
+# CONFIG_PACKAGE_kmod-ip6tables is not set
 CONFIG_PACKAGE_kmod-ipt-filter=y
+# CONFIG_PACKAGE_kmod-ipt-nat6 is not set
 # CONFIG_PACKAGE_kmod-ipt-raw6 is not set
+# CONFIG_PACKAGE_kmod-ipt-tproxy is not set
 CONFIG_PACKAGE_kmod-ipt-u32=y
+CONFIG_PACKAGE_kmod-ipt-ulog=y
 CONFIG_PACKAGE_kmod-lib-crc16=m
 CONFIG_PACKAGE_kmod-lib-crc32c=y
-CONFIG_PACKAGE_kmod-lib-lzo=y
 CONFIG_PACKAGE_kmod-mediatek_hnat=y
 CONFIG_PACKAGE_kmod-mt_wifi=y
+# CONFIG_PACKAGE_kmod-nf-ipt6 is not set
+# CONFIG_PACKAGE_kmod-nf-nat6 is not set
+# CONFIG_PACKAGE_kmod-nf-nathelper-extra is not set
+# CONFIG_PACKAGE_kmod-nf-reject6 is not set
 CONFIG_PACKAGE_kmod-nls-base=y
 CONFIG_PACKAGE_kmod-nls-cp437=y
 CONFIG_PACKAGE_kmod-nls-iso8859-1=y
 CONFIG_PACKAGE_kmod-nls-utf8=y
 CONFIG_PACKAGE_kmod-scsi-core=y
-# CONFIG_PACKAGE_kmod-tcp-bbr is not set
-CONFIG_PACKAGE_kmod-tun=y
 CONFIG_PACKAGE_kmod-warp=y
-# CONFIG_PACKAGE_kmod-zram is not set
 CONFIG_PACKAGE_kvcedit=y
+CONFIG_PACKAGE_l1profile=y
 CONFIG_PACKAGE_libatomic=y
 CONFIG_PACKAGE_libblkid=y
 CONFIG_PACKAGE_libcap-ng=y
@@ -174,9 +181,13 @@ CONFIG_PACKAGE_libevdev=y
 CONFIG_PACKAGE_libext2fs=m
 CONFIG_PACKAGE_libf2fs=m
 CONFIG_PACKAGE_libfido2=y
+# CONFIG_PACKAGE_libgmp is not set
 CONFIG_PACKAGE_libipset=y
 CONFIG_PACKAGE_libkvcutil=y
 CONFIG_PACKAGE_libncurses=y
+# CONFIG_PACKAGE_libnetfilter-conntrack is not set
+# CONFIG_PACKAGE_libnettle is not set
+# CONFIG_PACKAGE_libnfnetlink is not set
 CONFIG_PACKAGE_libnl=y
 CONFIG_PACKAGE_libnl-core=y
 CONFIG_PACKAGE_libnl-genl=y
@@ -185,27 +196,20 @@ CONFIG_PACKAGE_libnl-route=y
 CONFIG_PACKAGE_libopenssl-afalg_sync=y
 CONFIG_PACKAGE_libopenssl-devcrypto=y
 CONFIG_PACKAGE_libpcap=y
+CONFIG_PACKAGE_libpcre=y
+CONFIG_PACKAGE_librt=y
 CONFIG_PACKAGE_libsmartcols=m
 CONFIG_PACKAGE_libss=m
 CONFIG_PACKAGE_libstdcpp=y
 CONFIG_PACKAGE_libudev-zero=y
+# CONFIG_PACKAGE_libustream-openssl is not set
 CONFIG_PACKAGE_libuuid=y
 CONFIG_PACKAGE_losetup=m
 # CONFIG_PACKAGE_luci-app-cpufreq is not set
 CONFIG_PACKAGE_luci-app-mtk=y
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy is not set
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client is not set
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client is not set
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server is not set
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client is not set
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs is not set
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus is not set
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray is not set
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin is not set
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray is not set
+CONFIG_PACKAGE_luci-app-mtwifi=y
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ChinaDNS_NG is not set
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NONE_V2RAY is not set
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Client is not set
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_NONE_Client is not set
@@ -215,23 +219,25 @@ CONFIG_PACKAGE_luci-app-mtk=y
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Simple_Obfs is not set
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray is not set
 # CONFIG_PACKAGE_luci-app-turboacc is not set
-CONFIG_PACKAGE_luci-app-upnp=y
 # CONFIG_PACKAGE_luci-app-vssr_INCLUDE_ShadowsocksR_Libev_Server is not set
 # CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Trojan is not set
 # CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray is not set
 # CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray_plugin is not set
-CONFIG_PACKAGE_luci-i18n-mtk-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
 # CONFIG_PACKAGE_luci-theme-argon is not set
 CONFIG_PACKAGE_luci-theme-bootstrap-mod=y
 CONFIG_PACKAGE_mii_mgr=y
-CONFIG_PACKAGE_miniupnpd=y
+# CONFIG_PACKAGE_miniupnpd is not set
 CONFIG_PACKAGE_mkf2fs=m
-CONFIG_PACKAGE_mtkhqos_util=y
 CONFIG_PACKAGE_nano=y
+# CONFIG_PACKAGE_odhcp6c is not set
+# CONFIG_PACKAGE_odhcp6c_ext_cer_id is not set
+# CONFIG_PACKAGE_odhcpd-ipv6only is not set
+# CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id is not set
+# CONFIG_PACKAGE_omcproxy is not set
 CONFIG_PACKAGE_openssh-keygen=y
 CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_openssl-util=y
+# CONFIG_PACKAGE_pdnsd-alt is not set
 CONFIG_PACKAGE_regs=y
 CONFIG_PACKAGE_resolveip=y
 CONFIG_PACKAGE_swconfig=y
@@ -241,10 +247,12 @@ CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_wifi-profile=y
 CONFIG_PACKAGE_wireless-regdb=y
 CONFIG_PACKAGE_wireless-tools=y
+# CONFIG_PACKAGE_ipv6helper is not set
 # CONFIG_PACKAGE_zram-swap is not set
+CONFIG_PACKAGE_zlib=y
 # CONFIG_PKG_CHECK_FORMAT_SECURITY is not set
-CONFIG_PKG_FORTIFY_SOURCE_1=y
-# CONFIG_PKG_FORTIFY_SOURCE_2 is not set
+# CONFIG_PKG_FORTIFY_SOURCE_1 is not set
+CONFIG_PKG_FORTIFY_SOURCE_2=y
 # CONFIG_UnblockNeteaseMusic_Go is not set
 CONFIG_WARP_CHIPSET="mt7981"
 CONFIG_WARP_DBG_SUPPORT=y
@@ -265,4 +273,7 @@ CONFIG_first_card_name="MT7981"
 # CONFIG_MTK_RLM_CAL_CACHE_SUPPORT is not set
 # CONFIG_MTK_SNIFFER_RADIOTAP_SUPPORT is not set
 CONFIG_PACKAGE_kmod-ipt-offload=y
+CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
 CONFIG_PACKAGE_kmod-nf-flow=y
+CONFIG_PACKAGE_kmod-tcp-bbr=y
+# CONFIG_WARP_ATC_SUPPORT is not set
