--- a/.config
+++ b/.config
@@ -281,4 +281,5 @@ CONFIG_PACKAGE_kmod-ipt-offload=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
 CONFIG_PACKAGE_kmod-nf-flow=y
 CONFIG_PACKAGE_kmod-tcp-bbr=y
+# CONFIG_PACKAGE_kmod-ppp is not set
 # CONFIG_WARP_ATC_SUPPORT is not set
