--- a/.config
+++ b/.config
@@ -73,7 +73,7 @@ CONFIG_MTK_MUMIMO_SUPPORT=y
 CONFIG_MTK_MU_RA_SUPPORT=y
 CONFIG_MTK_OFFCHANNEL_SCAN_FEATURE=y
 CONFIG_MTK_OWE_SUPPORT=y
-CONFIG_MTK_QOS_R1_SUPPORT=y
+# CONFIG_MTK_QOS_R1_SUPPORT is not set
 CONFIG_MTK_RA_PHY_RATE_SUPPORT=y
 CONFIG_MTK_RED_SUPPORT=y
 CONFIG_MTK_RTMP_FLASH_SUPPORT=y
@@ -280,6 +280,6 @@ CONFIG_first_card_name="MT7981"
 CONFIG_PACKAGE_kmod-ipt-offload=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
 CONFIG_PACKAGE_kmod-nf-flow=y
-CONFIG_PACKAGE_kmod-tcp-bbr=y
+# CONFIG_PACKAGE_kmod-tcp-bbr is not set
 # CONFIG_PACKAGE_kmod-ppp is not set
 # CONFIG_WARP_ATC_SUPPORT is not set
