--- a/.config
+++ b/.config
@@ -225,6 +225,8 @@ CONFIG_PACKAGE_luci-app-store=y
 CONFIG_PACKAGE_luci-lib-taskd=y
 CONFIG_PACKAGE_luci-lib-xterm=y
 CONFIG_PACKAGE_kmod-taskd=y
+CONFIG_PACKAGE_luci-app-ddnsto=y
+CONFIG_PACKAGE_luci-app-linkease=y
 CONFIG_PACKAGE_nas_luci=y
 CONFIG_PACKAGE_luci-app-meta-istorex=y
 CONFIG_PACKAGE_luci-app-quickstart=y
